<resources>
    <string name="app_name">RunYasso800</string>
    <string name="persist">Persist (share)</string>
    <string name="goal">Goal (run time)</string>
    <string name="run_yasso_800">RunYasso800</string>
    <string name="result">Result</string>
    <string name="title_activity_config">Config</string>

    <!-- MainActivity -->
    <string name="id_sprint">sprint</string>
    <string name="id_jog">jog</string>
    <string name="id_iteration">iterations</string>
    <string name="id_gps">gps</string>

    <!-- Base Activity -->
    <string name="split_goal">Goal</string>

    <!-- Goal Activity -->
    <string name="your_goal">Marathon goal</string>
    <string name="run_name">Run name</string>
    <string name="enter_name">Enter name</string>
    <string name="hours">Hours</string>
    <string name="minutes">Minutes</string>

    <string name="run_time">800 meter goal</string>
    <string name="seconds">Seconds</string>
    <string name="select">Select</string>
    <string name="enter_time">Enter Time</string>
    <string name="calculating">Calculating...</string>
    <string name="missing_data">Missing name or race goal</string>
    <string name="goal_unreal">Goal is too low</string>

    <!-- Run Activity -->
    <string name="location">Location</string>
    <string name="latitude">lat.</string>
    <string name="longitude">long.</string>
    <string name="sprint">Sprint</string>
    <string name="sprint_time">Sprint Time</string>
    <string name="jog">Jog</string>
    <string name="jog_time">Jog Time</string>
    <string name="done">Done</string>
    <string name="pause">Pause</string>
    <string name="dunno">Dunno</string>
    <string name="idle">Idle</string>
    <string name="unknown">Unknown</string>
    <string name="total">Total</string>

    <!-- Result Activity -->
    <string name="splits">Splits</string>
    <string name="map">Map</string>
    <string name="green">green</string>
    <string name="blue">blue</string>
    <string name="violet">violet</string>

    <!-- Persist Activity -->
    <string name="share">Share</string>
    <string name="facebook">Facebook</string>
    <string name="email">Email</string>
    <string name="drive">Google Drive</string>
    <string name="header">Header</string>
    <string name="header_msg">Header msg</string>
    <string name="footer">Footer</string>
    <string name="footer_msg">Footer msg</string>
    <string name="title_activity_map">Map</string>
    <string name="race_goal">Race Goal:</string>
    <string name="sprint_goal">Sprint Goal:</string>
    <string name="no_models">Model(s) not available</string>
    <string name="total_sprint_dis">Total Sprint distance:</string>
    <string name="total_jog_dis">Total Jog distance:</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_result">Map</string>

    <!-- menu -->
    <string name="sprint_distance">Sprint Distance</string>
    <string name="jog_distance">Jog Distance</string>
    <string name="num_iterations">Num Iterations</string>
    <string name="gps_sample_rate">GPS Sample Rate</string>
    <string name="about">About</string>

    <!-- number picker dialog -->
    <string name="choose_number">Choose Number</string>
    <string name="ok">OK</string>
    <string name="btn_cancel">cancel</string>

    <!-- menu -->
    <string name="configuration">Config</string>

    <!-- SplitDetailFragment -->
    <string name="detail_split">Split:</string>
    <string name="detail_type">Type:</string>
    <string name="detail_duration">Time:</string>
    <string name="detail_distance">Span:</string>

    <!-- About dialog -->
    <string name="about_sample_rate">Sample Rate:</string>
    <string name="about_loops">Loops:</string>
    <string name="about_sprint_distance">Sprint:</string>
    <string name="about_jog_distance">Jog:</string>
    <string name="about_factory_reset">Factory Reset</string>
    <string name="about_version">Version:</string>

    <!-- Util -->
    <string name="location_updated">Location Updated: %1$s</string>
    <string name="launch_activity">Launch activity</string>
    <string name="remove_location_updates">Remove location updates</string>

</resources>
