<?xml version="1.0" encoding="utf-8"?>
<layout>
    <data>
        <variable name="listener"
            type="com.ctyeung.runyasso800.GoalActivity"/>
    </data>
    <androidx.appcompat.widget.LinearLayoutCompat
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="center"
        tools:context=".GoalActivity">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="left"
            android:layout_margin="@dimen/common_margin"
            android:background="@drawable/round_corners"
            android:orientation="horizontal">

            <TextView
                android:layout_width="@dimen/title_wid"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/common_margin"
                android:textStyle="bold"
                android:text="@string/run_name"/>

            <EditText
                android:layout_width="@dimen/value_wid"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/common_margin"
                android:id="@+id/txtRunName"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="left"
            android:background="@drawable/round_corners"
            android:layout_margin="@dimen/common_margin"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/title_your_goal"
                android:layout_width="@dimen/title_wid"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/common_margin"
                android:textStyle="bold"
                android:text="@string/your_goal"/>

            <Button
                android:id="@+id/btn_race_goal"
                android:layout_width="@dimen/value_wid"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/common_margin"
                android:textAllCaps="false"
                android:onClick="@{()-> listener.onClickTime()}"
                android:text="@string/enter_time" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_margin="@dimen/common_margin"
            android:background="@drawable/round_corners"
            android:gravity="left">

            <TextView
                android:id="@+id/title_cal_run_time"
                android:layout_width="@dimen/title_wid"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/common_margin"
                android:textStyle="bold"
                android:text="@string/run_time"/>

            <LinearLayout
                android:layout_width="@dimen/value_wid"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/common_margin"
                android:orientation="horizontal"
                android:gravity="center">

                <TextView
                    android:id="@+id/txt_sprint_goal"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:inputType="number"
                    android:text="@string/calculating" />

            </LinearLayout>

        </LinearLayout>

    </androidx.appcompat.widget.LinearLayoutCompat>
</layout>