<?xml version="1.0" encoding="utf-8"?>
<layout>
    <data>
        <variable name="listener"
            type="com.ctyeung.runyasso800.TimeActivity"/>
    </data>
    <androidx.appcompat.widget.LinearLayoutCompat
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="center"
        tools:context=".TimeActivity">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="left"
            android:paddingLeft="30dp"
            android:layout_margin="15dp"
            android:background="@drawable/round_corners"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/run_name"/>

            <EditText
                android:layout_width="60dp"
                android:layout_height="wrap_content"
                android:id="@+id/txtRunName"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="left"
            android:background="@drawable/round_corners"
            android:layout_margin="15dp"
            android:orientation="vertical">

            <TextView
                android:id="@+id/title_your_goal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="15dp"
                android:textStyle="bold"
                android:text="@string/your_goal"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:gravity="left">

                <TextView
                    android:layout_width="50dp"
                    android:layout_height="wrap_content"
                    android:text="@string/hours"/>

                <EditText
                    android:id="@+id/txt_race_hour"
                    android:layout_width="50dp"
                    android:layout_height="wrap_content"
                    android:width="40dp"
                    android:ems="10"
                    android:inputType="number"
                    android:text="04" />

                <TextView
                    android:layout_width="50dp"
                    android:layout_height="wrap_content"
                    android:text="@string/seconds"/>

                <EditText
                    android:id="@+id/txt_race_min"
                    android:layout_width="50dp"
                    android:layout_height="wrap_content"
                    android:width="40dp"
                    android:ems="10"
                    android:inputType="number"
                    android:text="30" />

            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_margin="15dp"
            android:background="@drawable/round_corners"
            android:gravity="left">

            <TextView
                android:id="@+id/title_cal_run_time"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="15dp"
                android:textStyle="bold"
                android:text="@string/run_time"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:gravity="left">

                <TextView
                    android:layout_width="50dp"
                    android:layout_height="wrap_content"
                    android:text="@string/minutes"/>

                <EditText
                    android:id="@+id/txt_cal_min"
                    android:layout_width="50dp"
                    android:layout_height="wrap_content"
                    android:width="40dp"
                    android:ems="10"
                    android:inputType="number"
                    android:text="04" />

                <TextView
                    android:layout_width="50dp"
                    android:layout_height="wrap_content"
                    android:text="@string/seconds"/>

                <EditText
                    android:id="@+id/txt_cal_sec"
                    android:layout_width="50dp"
                    android:layout_height="wrap_content"
                    android:width="40dp"
                    android:ems="10"
                    android:inputType="number"
                    android:text="30" />

            </LinearLayout>

        </LinearLayout>

    </androidx.appcompat.widget.LinearLayoutCompat>
</layout>